# datrang

./: Cargo.toml  Makefile  README.MD  STORAGE.MD  docker-compose.yaml  insert.sql  sample.sql  update.sql
datrang-ingestor/: .env  Cargo.toml
datrang-ingestor/src/: main.rs  migration.rs
scripts/: init-repl.sh  trigger-repl.sh
src/table/: postgres.rs
