[package]
name = "datrang"
version = "0.1.0"
edition = "2024"


[dependencies]
arrow = { version = "56.0.0"}
datafusion = { version ="49.0.0"}
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-postgres = "0.7"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }